# dices

./: .gitignore  readme.org
client/: .eslintignore  .eslintrc  index.html  package-lock.json  package.json  rollup.config.js  tsconfig.json
client/src/: camera.ts  dice.ts  index.ts  renderer.ts  scene.ts  types.ts  world.ts
client/src/debug/: debugRenderer.ts
client/src/debug/components/: dice.ts
client/src/dices/: dices.ts  types.ts
client/src/dices/components/: camera.ts  dice.ts  light.ts
client/src/graphics/: renderer.ts
client/src/graphics/components/: camera.ts  dice.ts  light.ts  pentagonal_trapezohedron_geometry.ts  scene.ts
client/src/physics/: engine.ts
client/styles/: style.css
server/: Cargo.toml
server/src/: main.rs  utils.rs
server/src/handlers/: dices.rs  mod.rs  rejections.rs
server/src/models/: dice.rs
server/src/routes/: dices.rs
