[package]
name = "dices"
version = "0.1.0"
edition = "2018"

[dependencies]
nanoid = "0.4"
rand = "0.8"
redis = { version = "*", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.2" }
validator = { version = "0.12", features = ["derive"] }
warp = "0.3"
