[package]
name = "dices"
version = "0.1.0"
edition = "2018"

[dependencies]
async-trait = { version = "0.1" }
nanoid = { version = "0.4" }
rand = { version = "0.8" }
redis = { version = "*", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.2" }
validator = { version = "0.12", features = ["derive"] }
warp = { version = "0.3" }

[dev-dependencies]
mockall = { version = "0.10" }
